#1029 Write footer key-value metadata, and move created_by beside it
The writer emitted no `key_value_metadata` at all — `writeFooter()` passed an
empty map and `FileMetaDataWriter` jumped from field 4 to field 6 — while the
read side has surfaced the field since #135. Anything derived from a file
Hardwood read therefore came back without the `ARROW:schema`, `pandas`, Spark
and table-format stamps it went in with, which is what stands between the
rewrite capability (#791) and a faithful copy.

Both footer-scope fields sit on `ParquetFileWriter` rather than in
`WriterConfig`. A configuration states what governs the row groups that follow
— stage 30 makes that explicit by letting `endRowGroup()` carry a new one —
while the footer states its fields once for the whole file. And key-value
metadata is worth setting after data has been written, for a value the caller
knows only then, which a value object fixed at `create()` cannot express.
Moving `created_by` breaks a surface stage 20 has just documented, so it
belongs inside `1.1.0.Beta1` rather than after it.